refactor: improve documentation and code clarity across multiple classes